--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,9 @@ markdown-extensions:
       separator: "-"
   - sane_lists
   - fenced_code
-#nav:
-#  - 'index.md'
-#  - 'Ch 1 -  Introduction': 'chap-01-Introduction.md'
+nav:
+  - 'index.md'
+  - 'Ch 1 -  Proofpoint': 'Proofpoint.md'
 #  - 'Ch 2 -  Applications': 'chap-02-applications.md'
 #  - 'Ch 3 -  Filesystems': 'chap-03-filesystems.md'
 #  - 'Ch 4 -  Encryption': 'chap-04-encryption.md'
